Refactoring + gmr oriented